--- a/styles/home.scss
+++ b/styles/home.scss
@@ -140,7 +140,7 @@ body {
     right: 0;
     bottom: 0;
     left: 0;
-    background-image: linear-gradient(to bottom right, #002f4b, #dc4225);
+    background-image: linear-gradient(to bottom right, #002f4b, #fd2a00);
     opacity: 0.7;
   }
 }
@@ -252,9 +252,12 @@ body {
   padding-top: 25px;
   padding-bottom: 15px;
   font-weight: normal;
-  max-width: 800px;
-  text-transform: uppercase;
   font-size: 22px;
+  line-height: 36px;
+
+  span {
+    text-transform: uppercase;
+  }
 }
 
 .section_2_subtitle_3 {
@@ -276,6 +279,29 @@ body {
   font-size: 22px;
 }
 
+.section_2_subtitle_2 {
+  font-weight: normal;
+  margin: 0;
+  padding: 20px;
+  padding-bottom: 15px;
+  color: #ff4444;
+  max-width: 1000px;
+  margin: auto;
+  font-size: 22px;
+}
+
+.section_2_subtitle_4 {
+  font-weight: normal;
+  margin: 0;
+  padding: 0px;
+  padding-bottom: 15px;
+  text-transform: uppercase;
+  color: #ff4444;
+  max-width: 1000px;
+  margin: auto;
+  font-size: 22px;
+}
+
 .image_grid {
   display: grid;
   grid-template-columns: auto auto auto;
@@ -294,7 +320,7 @@ body {
 }
 
 .section_3 {
-  background: #463d94;
+  background: #ff4444;
   padding: 50px 25px 50px 25px;
 }
 
@@ -310,28 +336,6 @@ body {
   position: absolute;
   z-index: 2;
   transform: translateY(-30px);
-}
-
-.section_2_subtitle_2 {
-  font-weight: normal;
-  margin: 0;
-  padding: 20px;
-  padding-bottom: 15px;
-  color: #ff4444;
-  max-width: 1000px;
-  margin: auto;
-  font-size: 22px;
-}
-
-.section_2_subtitle_4 {
-  font-weight: normal;
-  margin: 0;
-  padding: 0px;
-  padding-bottom: 15px;
-  color: #ff4444;
-  max-width: 1000px;
-  margin: auto;
-  font-size: 22px;
 }
 
 .inline_link {
@@ -502,6 +506,12 @@ body {
   .section_2_subtitle {
     font-size: 22px;
     padding: 15px 30px;
+    line-height: 30px;
+
+    span {
+      display: block;
+      margin-top: 10px;
+    }
   }
 
   .section_2_subtitle_2 {
@@ -552,8 +562,7 @@ body {
   }
 
   .section_3 {
-    background: #463d94;
-    padding: 100px 25px 80px 25px;
+    padding: 40px 25px 30px 25px;
   }
 
   .full_background {
