remove ebay link and add instagram

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -37,7 +37,7 @@ body {
 .shop_inventory {
   background-color: #ff4444;
   color: white;
-  padding: 10px 20px 12px 20px;
+  padding: 5px 8px;
   border-radius: 5px;
   cursor: pointer;
 
